# PicoUSBTemp

./: README.md
module/: Makefile  hello-1.c  hello-1.mod.c  run
pico/: CMakeLists.txt  build.sh  main.c  temp.c  temp.h  tusb_config.h  usb_descriptors.c
